Add skeleton to index.html and some scripting

--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     </head>
     <body>
         <h1>Hello world!</h1>
+        <header>
+            <ul>
+                <li>
+                    <button id="high-score">View High Scores</button>
+                </li>
+                <li id="countdown"></li>
+            </ul>
+        </header>
+        <main>
+            <div id="display"></div>
+        </main>
     </body>
 </html>
