Add default high score script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>JavaScript Coding Quiz</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="./assets/quizscript.js"></script>
     </head>
     <body>
         <h1>Hello world!</h1>
