--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>JavaScript Coding Quiz</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="./assets/quizscript.js"></script>
     </head>
     <body>
         <h1>Hello world!</h1>
@@ -18,5 +18,6 @@
         <main>
             <div id="display"></div>
         </main>
+        <script src="./assets/quizscript.js"></script>
     </body>
 </html>
