Set displayHighScore to clear the screen; add default screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
             </ul>
         </header>
         <main>
-            <div id="display"></div>
+            <div id="display">
+                <h1>Coding Quiz Challenge!</h1>
+                <p>
+                    Try to answer the following code-related questions within the time
+                    alotted.  Keep in mind that incorrect answers will penalize your
+                    score/time by ten seconds!
+                </p>
+                <button>Start Quiz</button>
+            </div>
         </main>
         <script src="./assets/quizscript.js"></script>
     </body>
