--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     alotted.  Keep in mind that incorrect answers will penalize your
                     score/time by ten seconds!
                 </p>
-                <button>Start Quiz</button>
+                <button id="start-quiz">Start Quiz</button>
             </div>
         </main>
         <script src="./assets/quizscript.js"></script>
