Apply CSS styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <title>JavaScript Coding Quiz</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/styles.css" />
     </head>
     <body>
         <h1>Hello world!</h1>
         <header>
-            <ul>
+            <ul class="header-list">
                 <li>
                     <button id="high-score">View High Scores</button>
                 </li>
