--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>
         </header>
         <main>
-            <div id="display">
+            <div id="display" class="display">
                 <h1>Coding Quiz Challenge!</h1>
                 <p>
                     Try to answer the following code-related questions within the time
